@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-21T16:23:51Z",
-  "count_outdated" : 346,
-  "uniques_outdated" : 197,
+  "timestamp" : "2022-06-22T16:21:56Z",
+  "count_outdated" : 347,
+  "uniques_outdated" : 198,
   "count" : 373,
   "uniques" : 215,
   "clones" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 1,
