@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 1,
